// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ExportPrivateInfo/> should render <ExportPrivateInfo/> correctly and when there is a mnemonic 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ExportPrivateInfo
    mnemonic="over sentence spend best business museum ripple shop vault present travel fire"
    onExit={[Function]}
    privateKey="0x566157c389ca0afe0237387cc352b6910594548bd77631a19e9ccc588c969a2a"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <style__TopHeading>
          Never share this information with anyone
</style__TopHeading>,
        <style__TopHeading>
          Always keep a physical backup in a safe location
</style__TopHeading>,
        <style__TextPrimary>
          <div
                    style={
                              Object {
                                        "marginBottom": "0.5rem",
                                      }
                    }
          >
                    <style__SecondaryHeader
                              large={true}
                    >
                              Mnemonic
                              <CopyToClipboard
                                        onCopy={undefined}
                                        options={undefined}
                                        text="over sentence spend best business museum ripple shop vault present travel fire"
                              >
                                        <style__StyledIcon
                                                  icon="copy"
                                                  id="mnemonic"
                                                  onClick={[Function]}
                                                  size="small"
                                                  type="icon"
                                        />
                              </CopyToClipboard>
                    </style__SecondaryHeader>
                    <br />
                    <Text>
                              over sentence spend best business museum ripple shop vault present travel fire
                    </Text>
          </div>
          <div>
                    <style__SecondaryHeader
                              large={true}
                    >
                              Private key
                              <CopyToClipboard
                                        onCopy={undefined}
                                        options={undefined}
                                        text="0x566157c389ca0afe0237387cc352b6910594548bd77631a19e9ccc588c969a2a"
                              >
                                        <style__StyledIcon
                                                  icon="copy"
                                                  id="privateKey"
                                                  onClick={[Function]}
                                                  size="small"
                                                  type="icon"
                                        />
                              </CopyToClipboard>
                    </style__SecondaryHeader>
                    <br />
                    <Text>
                              0x566157c389ca0afe0237387cc352b6910594548bd77631a19e9ccc588c969a2a
                    </Text>
          </div>
</style__TextPrimary>,
        <style__ParentDiv>
          <style__StyledButton
                    id="exit"
                    onClick={[Function]}
                    type="primary"
          >
                    Close
          </style__StyledButton>
</style__ParentDiv>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "Never share this information with anyone",
        },
        "ref": null,
        "rendered": "Never share this information with anyone",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "Always keep a physical backup in a safe location",
        },
        "ref": null,
        "rendered": "Always keep a physical backup in a safe location",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <div
              style={
                            Object {
                                          "marginBottom": "0.5rem",
                                        }
              }
>
              <style__SecondaryHeader
                            large={true}
              >
                            Mnemonic
                            <CopyToClipboard
                                          onCopy={undefined}
                                          options={undefined}
                                          text="over sentence spend best business museum ripple shop vault present travel fire"
                            >
                                          <style__StyledIcon
                                                        icon="copy"
                                                        id="mnemonic"
                                                        onClick={[Function]}
                                                        size="small"
                                                        type="icon"
                                          />
                            </CopyToClipboard>
              </style__SecondaryHeader>
              <br />
              <Text>
                            over sentence spend best business museum ripple shop vault present travel fire
              </Text>
</div>,
            <div>
              <style__SecondaryHeader
                            large={true}
              >
                            Private key
                            <CopyToClipboard
                                          onCopy={undefined}
                                          options={undefined}
                                          text="0x566157c389ca0afe0237387cc352b6910594548bd77631a19e9ccc588c969a2a"
                            >
                                          <style__StyledIcon
                                                        icon="copy"
                                                        id="privateKey"
                                                        onClick={[Function]}
                                                        size="small"
                                                        type="icon"
                                          />
                            </CopyToClipboard>
              </style__SecondaryHeader>
              <br />
              <Text>
                            0x566157c389ca0afe0237387cc352b6910594548bd77631a19e9ccc588c969a2a
              </Text>
</div>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <style__SecondaryHeader
                  large={true}
>
                  Mnemonic
                  <CopyToClipboard
                                    onCopy={undefined}
                                    options={undefined}
                                    text="over sentence spend best business museum ripple shop vault present travel fire"
                  >
                                    <style__StyledIcon
                                                      icon="copy"
                                                      id="mnemonic"
                                                      onClick={[Function]}
                                                      size="small"
                                                      type="icon"
                                    />
                  </CopyToClipboard>
</style__SecondaryHeader>,
                <br />,
                <Text>
                  over sentence spend best business museum ripple shop vault present travel fire
</Text>,
              ],
              "style": Object {
                "marginBottom": "0.5rem",
              },
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    "Mnemonic",
                    <CopyToClipboard
                      onCopy={undefined}
                      options={undefined}
                      text="over sentence spend best business museum ripple shop vault present travel fire"
>
                      <style__StyledIcon
                                            icon="copy"
                                            id="mnemonic"
                                            onClick={[Function]}
                                            size="small"
                                            type="icon"
                      />
</CopyToClipboard>,
                  ],
                  "large": true,
                },
                "ref": null,
                "rendered": Array [
                  "Mnemonic",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": <style__StyledIcon
                        icon="copy"
                        id="mnemonic"
                        onClick={[Function]}
                        size="small"
                        type="icon"
/>,
                      "onCopy": undefined,
                      "options": undefined,
                      "text": "over sentence spend best business museum ripple shop vault present travel fire",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "icon": "copy",
                        "id": "mnemonic",
                        "onClick": [Function],
                        "size": "small",
                        "type": "icon",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": "br",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "over sentence spend best business museum ripple shop vault present travel fire",
                },
                "ref": null,
                "rendered": "over sentence spend best business museum ripple shop vault present travel fire",
                "type": [Function],
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <style__SecondaryHeader
                  large={true}
>
                  Private key
                  <CopyToClipboard
                                    onCopy={undefined}
                                    options={undefined}
                                    text="0x566157c389ca0afe0237387cc352b6910594548bd77631a19e9ccc588c969a2a"
                  >
                                    <style__StyledIcon
                                                      icon="copy"
                                                      id="privateKey"
                                                      onClick={[Function]}
                                                      size="small"
                                                      type="icon"
                                    />
                  </CopyToClipboard>
</style__SecondaryHeader>,
                <br />,
                <Text>
                  0x566157c389ca0afe0237387cc352b6910594548bd77631a19e9ccc588c969a2a
</Text>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    "Private key",
                    <CopyToClipboard
                      onCopy={undefined}
                      options={undefined}
                      text="0x566157c389ca0afe0237387cc352b6910594548bd77631a19e9ccc588c969a2a"
>
                      <style__StyledIcon
                                            icon="copy"
                                            id="privateKey"
                                            onClick={[Function]}
                                            size="small"
                                            type="icon"
                      />
</CopyToClipboard>,
                  ],
                  "large": true,
                },
                "ref": null,
                "rendered": Array [
                  "Private key",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": <style__StyledIcon
                        icon="copy"
                        id="privateKey"
                        onClick={[Function]}
                        size="small"
                        type="icon"
/>,
                      "onCopy": undefined,
                      "options": undefined,
                      "text": "0x566157c389ca0afe0237387cc352b6910594548bd77631a19e9ccc588c969a2a",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "icon": "copy",
                        "id": "privateKey",
                        "onClick": [Function],
                        "size": "small",
                        "type": "icon",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": "br",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "0x566157c389ca0afe0237387cc352b6910594548bd77631a19e9ccc588c969a2a",
                },
                "ref": null,
                "rendered": "0x566157c389ca0afe0237387cc352b6910594548bd77631a19e9ccc588c969a2a",
                "type": [Function],
              },
            ],
            "type": "div",
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <style__StyledButton
            id="exit"
            onClick={[Function]}
            type="primary"
>
            Close
</style__StyledButton>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Close",
            "id": "exit",
            "onClick": [Function],
            "type": "primary",
          },
          "ref": null,
          "rendered": "Close",
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <style__TopHeading>
            Never share this information with anyone
</style__TopHeading>,
          <style__TopHeading>
            Always keep a physical backup in a safe location
</style__TopHeading>,
          <style__TextPrimary>
            <div
                        style={
                                    Object {
                                                "marginBottom": "0.5rem",
                                              }
                        }
            >
                        <style__SecondaryHeader
                                    large={true}
                        >
                                    Mnemonic
                                    <CopyToClipboard
                                                onCopy={undefined}
                                                options={undefined}
                                                text="over sentence spend best business museum ripple shop vault present travel fire"
                                    >
                                                <style__StyledIcon
                                                            icon="copy"
                                                            id="mnemonic"
                                                            onClick={[Function]}
                                                            size="small"
                                                            type="icon"
                                                />
                                    </CopyToClipboard>
                        </style__SecondaryHeader>
                        <br />
                        <Text>
                                    over sentence spend best business museum ripple shop vault present travel fire
                        </Text>
            </div>
            <div>
                        <style__SecondaryHeader
                                    large={true}
                        >
                                    Private key
                                    <CopyToClipboard
                                                onCopy={undefined}
                                                options={undefined}
                                                text="0x566157c389ca0afe0237387cc352b6910594548bd77631a19e9ccc588c969a2a"
                                    >
                                                <style__StyledIcon
                                                            icon="copy"
                                                            id="privateKey"
                                                            onClick={[Function]}
                                                            size="small"
                                                            type="icon"
                                                />
                                    </CopyToClipboard>
                        </style__SecondaryHeader>
                        <br />
                        <Text>
                                    0x566157c389ca0afe0237387cc352b6910594548bd77631a19e9ccc588c969a2a
                        </Text>
            </div>
</style__TextPrimary>,
          <style__ParentDiv>
            <style__StyledButton
                        id="exit"
                        onClick={[Function]}
                        type="primary"
            >
                        Close
            </style__StyledButton>
</style__ParentDiv>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Never share this information with anyone",
          },
          "ref": null,
          "rendered": "Never share this information with anyone",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Always keep a physical backup in a safe location",
          },
          "ref": null,
          "rendered": "Always keep a physical backup in a safe location",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <div
                style={
                                Object {
                                                "marginBottom": "0.5rem",
                                              }
                }
>
                <style__SecondaryHeader
                                large={true}
                >
                                Mnemonic
                                <CopyToClipboard
                                                onCopy={undefined}
                                                options={undefined}
                                                text="over sentence spend best business museum ripple shop vault present travel fire"
                                >
                                                <style__StyledIcon
                                                                icon="copy"
                                                                id="mnemonic"
                                                                onClick={[Function]}
                                                                size="small"
                                                                type="icon"
                                                />
                                </CopyToClipboard>
                </style__SecondaryHeader>
                <br />
                <Text>
                                over sentence spend best business museum ripple shop vault present travel fire
                </Text>
</div>,
              <div>
                <style__SecondaryHeader
                                large={true}
                >
                                Private key
                                <CopyToClipboard
                                                onCopy={undefined}
                                                options={undefined}
                                                text="0x566157c389ca0afe0237387cc352b6910594548bd77631a19e9ccc588c969a2a"
                                >
                                                <style__StyledIcon
                                                                icon="copy"
                                                                id="privateKey"
                                                                onClick={[Function]}
                                                                size="small"
                                                                type="icon"
                                                />
                                </CopyToClipboard>
                </style__SecondaryHeader>
                <br />
                <Text>
                                0x566157c389ca0afe0237387cc352b6910594548bd77631a19e9ccc588c969a2a
                </Text>
</div>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <style__SecondaryHeader
                    large={true}
>
                    Mnemonic
                    <CopyToClipboard
                                        onCopy={undefined}
                                        options={undefined}
                                        text="over sentence spend best business museum ripple shop vault present travel fire"
                    >
                                        <style__StyledIcon
                                                            icon="copy"
                                                            id="mnemonic"
                                                            onClick={[Function]}
                                                            size="small"
                                                            type="icon"
                                        />
                    </CopyToClipboard>
</style__SecondaryHeader>,
                  <br />,
                  <Text>
                    over sentence spend best business museum ripple shop vault present travel fire
</Text>,
                ],
                "style": Object {
                  "marginBottom": "0.5rem",
                },
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": Array [
                      "Mnemonic",
                      <CopyToClipboard
                        onCopy={undefined}
                        options={undefined}
                        text="over sentence spend best business museum ripple shop vault present travel fire"
>
                        <style__StyledIcon
                                                icon="copy"
                                                id="mnemonic"
                                                onClick={[Function]}
                                                size="small"
                                                type="icon"
                        />
</CopyToClipboard>,
                    ],
                    "large": true,
                  },
                  "ref": null,
                  "rendered": Array [
                    "Mnemonic",
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "children": <style__StyledIcon
                          icon="copy"
                          id="mnemonic"
                          onClick={[Function]}
                          size="small"
                          type="icon"
/>,
                        "onCopy": undefined,
                        "options": undefined,
                        "text": "over sentence spend best business museum ripple shop vault present travel fire",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "class",
                        "props": Object {
                          "icon": "copy",
                          "id": "mnemonic",
                          "onClick": [Function],
                          "size": "small",
                          "type": "icon",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": [Function],
                      },
                      "type": [Function],
                    },
                  ],
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {},
                  "ref": null,
                  "rendered": null,
                  "type": "br",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "over sentence spend best business museum ripple shop vault present travel fire",
                  },
                  "ref": null,
                  "rendered": "over sentence spend best business museum ripple shop vault present travel fire",
                  "type": [Function],
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <style__SecondaryHeader
                    large={true}
>
                    Private key
                    <CopyToClipboard
                                        onCopy={undefined}
                                        options={undefined}
                                        text="0x566157c389ca0afe0237387cc352b6910594548bd77631a19e9ccc588c969a2a"
                    >
                                        <style__StyledIcon
                                                            icon="copy"
                                                            id="privateKey"
                                                            onClick={[Function]}
                                                            size="small"
                                                            type="icon"
                                        />
                    </CopyToClipboard>
</style__SecondaryHeader>,
                  <br />,
                  <Text>
                    0x566157c389ca0afe0237387cc352b6910594548bd77631a19e9ccc588c969a2a
</Text>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": Array [
                      "Private key",
                      <CopyToClipboard
                        onCopy={undefined}
                        options={undefined}
                        text="0x566157c389ca0afe0237387cc352b6910594548bd77631a19e9ccc588c969a2a"
>
                        <style__StyledIcon
                                                icon="copy"
                                                id="privateKey"
                                                onClick={[Function]}
                                                size="small"
                                                type="icon"
                        />
</CopyToClipboard>,
                    ],
                    "large": true,
                  },
                  "ref": null,
                  "rendered": Array [
                    "Private key",
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "children": <style__StyledIcon
                          icon="copy"
                          id="privateKey"
                          onClick={[Function]}
                          size="small"
                          type="icon"
/>,
                        "onCopy": undefined,
                        "options": undefined,
                        "text": "0x566157c389ca0afe0237387cc352b6910594548bd77631a19e9ccc588c969a2a",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "class",
                        "props": Object {
                          "icon": "copy",
                          "id": "privateKey",
                          "onClick": [Function],
                          "size": "small",
                          "type": "icon",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": [Function],
                      },
                      "type": [Function],
                    },
                  ],
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {},
                  "ref": null,
                  "rendered": null,
                  "type": "br",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "0x566157c389ca0afe0237387cc352b6910594548bd77631a19e9ccc588c969a2a",
                  },
                  "ref": null,
                  "rendered": "0x566157c389ca0afe0237387cc352b6910594548bd77631a19e9ccc588c969a2a",
                  "type": [Function],
                },
              ],
              "type": "div",
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <style__StyledButton
              id="exit"
              onClick={[Function]}
              type="primary"
>
              Close
</style__StyledButton>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Close",
              "id": "exit",
              "onClick": [Function],
              "type": "primary",
            },
            "ref": null,
            "rendered": "Close",
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<ExportPrivateInfo/> should render <ExportPrivateInfo/> correctly and when there is not a mnemonic 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ExportPrivateInfo
    mnemonic={undefined}
    onExit={[Function]}
    privateKey="0xc6ea866d2f5468e0caf0e96e1491c257f501a30ce695e2d8b876946995699828"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <style__TopHeading>
          Never share this information with anyone
</style__TopHeading>,
        <style__TopHeading>
          Always keep a physical backup in a safe location
</style__TopHeading>,
        <style__TextPrimary>
          <div
                    style={
                              Object {
                                        "marginBottom": "0.5rem",
                                      }
                    }
          >
                    <style__SecondaryHeader
                              large={true}
                    >
                              Mnemonic
                    </style__SecondaryHeader>
                    <br />
                    <Text>
                              This wallet was imported using a private key therefore does not have a mnemonic to export
                    </Text>
          </div>
          <div>
                    <style__SecondaryHeader
                              large={true}
                    >
                              Private key
                              <CopyToClipboard
                                        onCopy={undefined}
                                        options={undefined}
                                        text="0xc6ea866d2f5468e0caf0e96e1491c257f501a30ce695e2d8b876946995699828"
                              >
                                        <style__StyledIcon
                                                  icon="copy"
                                                  id="privateKey"
                                                  onClick={[Function]}
                                                  size="small"
                                                  type="icon"
                                        />
                              </CopyToClipboard>
                    </style__SecondaryHeader>
                    <br />
                    <Text>
                              0xc6ea866d2f5468e0caf0e96e1491c257f501a30ce695e2d8b876946995699828
                    </Text>
          </div>
</style__TextPrimary>,
        <style__ParentDiv>
          <style__StyledButton
                    id="exit"
                    onClick={[Function]}
                    type="primary"
          >
                    Close
          </style__StyledButton>
</style__ParentDiv>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "Never share this information with anyone",
        },
        "ref": null,
        "rendered": "Never share this information with anyone",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "Always keep a physical backup in a safe location",
        },
        "ref": null,
        "rendered": "Always keep a physical backup in a safe location",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <div
              style={
                            Object {
                                          "marginBottom": "0.5rem",
                                        }
              }
>
              <style__SecondaryHeader
                            large={true}
              >
                            Mnemonic
              </style__SecondaryHeader>
              <br />
              <Text>
                            This wallet was imported using a private key therefore does not have a mnemonic to export
              </Text>
</div>,
            <div>
              <style__SecondaryHeader
                            large={true}
              >
                            Private key
                            <CopyToClipboard
                                          onCopy={undefined}
                                          options={undefined}
                                          text="0xc6ea866d2f5468e0caf0e96e1491c257f501a30ce695e2d8b876946995699828"
                            >
                                          <style__StyledIcon
                                                        icon="copy"
                                                        id="privateKey"
                                                        onClick={[Function]}
                                                        size="small"
                                                        type="icon"
                                          />
                            </CopyToClipboard>
              </style__SecondaryHeader>
              <br />
              <Text>
                            0xc6ea866d2f5468e0caf0e96e1491c257f501a30ce695e2d8b876946995699828
              </Text>
</div>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <style__SecondaryHeader
                  large={true}
>
                  Mnemonic
</style__SecondaryHeader>,
                <br />,
                <Text>
                  This wallet was imported using a private key therefore does not have a mnemonic to export
</Text>,
              ],
              "style": Object {
                "marginBottom": "0.5rem",
              },
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Mnemonic",
                  "large": true,
                },
                "ref": null,
                "rendered": "Mnemonic",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": "br",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "This wallet was imported using a private key therefore does not have a mnemonic to export",
                },
                "ref": null,
                "rendered": "This wallet was imported using a private key therefore does not have a mnemonic to export",
                "type": [Function],
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <style__SecondaryHeader
                  large={true}
>
                  Private key
                  <CopyToClipboard
                                    onCopy={undefined}
                                    options={undefined}
                                    text="0xc6ea866d2f5468e0caf0e96e1491c257f501a30ce695e2d8b876946995699828"
                  >
                                    <style__StyledIcon
                                                      icon="copy"
                                                      id="privateKey"
                                                      onClick={[Function]}
                                                      size="small"
                                                      type="icon"
                                    />
                  </CopyToClipboard>
</style__SecondaryHeader>,
                <br />,
                <Text>
                  0xc6ea866d2f5468e0caf0e96e1491c257f501a30ce695e2d8b876946995699828
</Text>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    "Private key",
                    <CopyToClipboard
                      onCopy={undefined}
                      options={undefined}
                      text="0xc6ea866d2f5468e0caf0e96e1491c257f501a30ce695e2d8b876946995699828"
>
                      <style__StyledIcon
                                            icon="copy"
                                            id="privateKey"
                                            onClick={[Function]}
                                            size="small"
                                            type="icon"
                      />
</CopyToClipboard>,
                  ],
                  "large": true,
                },
                "ref": null,
                "rendered": Array [
                  "Private key",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": <style__StyledIcon
                        icon="copy"
                        id="privateKey"
                        onClick={[Function]}
                        size="small"
                        type="icon"
/>,
                      "onCopy": undefined,
                      "options": undefined,
                      "text": "0xc6ea866d2f5468e0caf0e96e1491c257f501a30ce695e2d8b876946995699828",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "icon": "copy",
                        "id": "privateKey",
                        "onClick": [Function],
                        "size": "small",
                        "type": "icon",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": "br",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "0xc6ea866d2f5468e0caf0e96e1491c257f501a30ce695e2d8b876946995699828",
                },
                "ref": null,
                "rendered": "0xc6ea866d2f5468e0caf0e96e1491c257f501a30ce695e2d8b876946995699828",
                "type": [Function],
              },
            ],
            "type": "div",
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <style__StyledButton
            id="exit"
            onClick={[Function]}
            type="primary"
>
            Close
</style__StyledButton>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Close",
            "id": "exit",
            "onClick": [Function],
            "type": "primary",
          },
          "ref": null,
          "rendered": "Close",
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <style__TopHeading>
            Never share this information with anyone
</style__TopHeading>,
          <style__TopHeading>
            Always keep a physical backup in a safe location
</style__TopHeading>,
          <style__TextPrimary>
            <div
                        style={
                                    Object {
                                                "marginBottom": "0.5rem",
                                              }
                        }
            >
                        <style__SecondaryHeader
                                    large={true}
                        >
                                    Mnemonic
                        </style__SecondaryHeader>
                        <br />
                        <Text>
                                    This wallet was imported using a private key therefore does not have a mnemonic to export
                        </Text>
            </div>
            <div>
                        <style__SecondaryHeader
                                    large={true}
                        >
                                    Private key
                                    <CopyToClipboard
                                                onCopy={undefined}
                                                options={undefined}
                                                text="0xc6ea866d2f5468e0caf0e96e1491c257f501a30ce695e2d8b876946995699828"
                                    >
                                                <style__StyledIcon
                                                            icon="copy"
                                                            id="privateKey"
                                                            onClick={[Function]}
                                                            size="small"
                                                            type="icon"
                                                />
                                    </CopyToClipboard>
                        </style__SecondaryHeader>
                        <br />
                        <Text>
                                    0xc6ea866d2f5468e0caf0e96e1491c257f501a30ce695e2d8b876946995699828
                        </Text>
            </div>
</style__TextPrimary>,
          <style__ParentDiv>
            <style__StyledButton
                        id="exit"
                        onClick={[Function]}
                        type="primary"
            >
                        Close
            </style__StyledButton>
</style__ParentDiv>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Never share this information with anyone",
          },
          "ref": null,
          "rendered": "Never share this information with anyone",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Always keep a physical backup in a safe location",
          },
          "ref": null,
          "rendered": "Always keep a physical backup in a safe location",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <div
                style={
                                Object {
                                                "marginBottom": "0.5rem",
                                              }
                }
>
                <style__SecondaryHeader
                                large={true}
                >
                                Mnemonic
                </style__SecondaryHeader>
                <br />
                <Text>
                                This wallet was imported using a private key therefore does not have a mnemonic to export
                </Text>
</div>,
              <div>
                <style__SecondaryHeader
                                large={true}
                >
                                Private key
                                <CopyToClipboard
                                                onCopy={undefined}
                                                options={undefined}
                                                text="0xc6ea866d2f5468e0caf0e96e1491c257f501a30ce695e2d8b876946995699828"
                                >
                                                <style__StyledIcon
                                                                icon="copy"
                                                                id="privateKey"
                                                                onClick={[Function]}
                                                                size="small"
                                                                type="icon"
                                                />
                                </CopyToClipboard>
                </style__SecondaryHeader>
                <br />
                <Text>
                                0xc6ea866d2f5468e0caf0e96e1491c257f501a30ce695e2d8b876946995699828
                </Text>
</div>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <style__SecondaryHeader
                    large={true}
>
                    Mnemonic
</style__SecondaryHeader>,
                  <br />,
                  <Text>
                    This wallet was imported using a private key therefore does not have a mnemonic to export
</Text>,
                ],
                "style": Object {
                  "marginBottom": "0.5rem",
                },
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "Mnemonic",
                    "large": true,
                  },
                  "ref": null,
                  "rendered": "Mnemonic",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {},
                  "ref": null,
                  "rendered": null,
                  "type": "br",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "This wallet was imported using a private key therefore does not have a mnemonic to export",
                  },
                  "ref": null,
                  "rendered": "This wallet was imported using a private key therefore does not have a mnemonic to export",
                  "type": [Function],
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <style__SecondaryHeader
                    large={true}
>
                    Private key
                    <CopyToClipboard
                                        onCopy={undefined}
                                        options={undefined}
                                        text="0xc6ea866d2f5468e0caf0e96e1491c257f501a30ce695e2d8b876946995699828"
                    >
                                        <style__StyledIcon
                                                            icon="copy"
                                                            id="privateKey"
                                                            onClick={[Function]}
                                                            size="small"
                                                            type="icon"
                                        />
                    </CopyToClipboard>
</style__SecondaryHeader>,
                  <br />,
                  <Text>
                    0xc6ea866d2f5468e0caf0e96e1491c257f501a30ce695e2d8b876946995699828
</Text>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": Array [
                      "Private key",
                      <CopyToClipboard
                        onCopy={undefined}
                        options={undefined}
                        text="0xc6ea866d2f5468e0caf0e96e1491c257f501a30ce695e2d8b876946995699828"
>
                        <style__StyledIcon
                                                icon="copy"
                                                id="privateKey"
                                                onClick={[Function]}
                                                size="small"
                                                type="icon"
                        />
</CopyToClipboard>,
                    ],
                    "large": true,
                  },
                  "ref": null,
                  "rendered": Array [
                    "Private key",
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "children": <style__StyledIcon
                          icon="copy"
                          id="privateKey"
                          onClick={[Function]}
                          size="small"
                          type="icon"
/>,
                        "onCopy": undefined,
                        "options": undefined,
                        "text": "0xc6ea866d2f5468e0caf0e96e1491c257f501a30ce695e2d8b876946995699828",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "class",
                        "props": Object {
                          "icon": "copy",
                          "id": "privateKey",
                          "onClick": [Function],
                          "size": "small",
                          "type": "icon",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": [Function],
                      },
                      "type": [Function],
                    },
                  ],
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {},
                  "ref": null,
                  "rendered": null,
                  "type": "br",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "0xc6ea866d2f5468e0caf0e96e1491c257f501a30ce695e2d8b876946995699828",
                  },
                  "ref": null,
                  "rendered": "0xc6ea866d2f5468e0caf0e96e1491c257f501a30ce695e2d8b876946995699828",
                  "type": [Function],
                },
              ],
              "type": "div",
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <style__StyledButton
              id="exit"
              onClick={[Function]}
              type="primary"
>
              Close
</style__StyledButton>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Close",
              "id": "exit",
              "onClick": [Function],
              "type": "primary",
            },
            "ref": null,
            "rendered": "Close",
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
